# front-desk

./: .env.example  .gitignore  README.md  demo.py  langgraph.json  main.py  pyproject.toml  pytest.ini
admin_agent/: __init__.py  agent.py
admin_agent/utils/: prompt.py  state.py
tests/: __init__.py  conftest.py  test_agent.py  test_google_cal.py  test_integration_live.py  test_tools.py
utils/: __init__.py
utils/calendar/: __init__.py  google_cal.py
